Mark and reindent util/support.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23392 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -670,7 +670,8 @@ INDENTDIRS = \
 	lib/krb5 \
 	plugins \
 	prototype \
-	slave
+	slave \
+	util/support
 
 BSDFILES = \
 	kadmin/cli/strftime.c \
@@ -683,7 +684,9 @@ BSDFILES = \
 	lib/kadm5/srv/adb_xdr.c \
 	lib/krb5/krb/strftime.c \
 	lib/krb5/krb/strptime.c \
-	slave/kpropd_rpc.c
+	slave/kpropd_rpc.c \
+	util/support/mkstemp.c \
+	util/support/strlcpy.c
 
 OTHEREXCLUDES = \
 	include/iprop.h \
