Check ALL_DEP_SRCS, not SRCS, to decide what to put into the deps file.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23434 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/post.in
+++ b/src/config/post.in
@@ -95,7 +95,7 @@ depend-dependencies:
 # until we're sure we've gotten everything converted and excised the
 # old stuff from Makefile.in files.
 depend-update-makefile: .depend depend-recurse
-	if test -n "$(SRCS)" ; then \
+	if test "$(ALL_DEP_SRCS)" != " " ; then \
 		$(CP) .depend $(srcdir)/deps.new ; \
 	else \
 		echo "# No dependencies here." > $(srcdir)/deps.new ; \
