--- a/src/tests/threads/Makefile.in
+++ b/src/tests/threads/Makefile.in
@@ -7,6 +7,8 @@ RUN_SETUP = @KRB5_RUN_ENV@
 
 SRCS=$(srcdir)/t_rcache.c \
 	$(srcdir)/gss-perf.c \
+	$(srcdir)/init_ctx.c \
+	$(srcdir)/profread.c \
 	$(srcdir)/prof1.c
 
 all::
@@ -23,8 +25,14 @@ prof1: prof1.o $(KRB5_BASE_DEPLIBS)
 
 prof1.o: prof1.c
 
-gss-perf: gss-perf.o
+gss-perf: gss-perf.o $(KRB5_BASE_DEPLIBS) $(GSS_DEPLIBS)
 	$(CC_LINK) $(PTHREAD_CFLAGS) -o gss-perf gss-perf.o $(GSS_LIBS) $(KRB5_BASE_LIBS) $(THREAD_LINKOPTS)
+
+init_ctx: init_ctx.o $(KRB5_BASE_DEPLIBS)
+	$(CC_LINK) $(PTHREAD_CFLAGS) -o init_ctx init_ctx.o $(KRB5_BASE_LIBS) $(THREAD_LINKOPTS)
+
+profread: profread.o $(KRB5_BASE_DEPLIBS)
+	$(CC_LINK) $(PTHREAD_CFLAGS) -o profread profread.o $(KRB5_BASE_LIBS) $(THREAD_LINKOPTS)
 
 check-unix:: run-t_rcache
 
