ticket: 6621 subject: disable weak crypto by default
Set allow_weak_crypto=false by default.  Set default master key
enctype to sha256.  Adjust test suite to compensate.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@23586 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/tests/mkeystash_compat/Makefile.in
+++ b/src/tests/mkeystash_compat/Makefile.in
@@ -25,6 +25,7 @@ kdc.conf: Makefile
 	rm -rf kdc.conf
 	@echo "[realms]" > kdc.conf
 	@echo "$(TEST_REALM) = {" >> kdc.conf
+	@echo "  master_key_type = des3-cbc-sha1" >> kdc.conf
 	@echo "  key_stash_file = `pwd`/stash_file" >> kdc.conf
 	@echo "}" >> kdc.conf
 
